Change gap to margin/Fix form font sizes
-This is because gap is applied to every 2 inputs and not each one,
looks ugly when wrapped
-Right margin set to 10% so it changes relative to container size
-Change input elements size to 0.8em
-Change button top-bot padding to use bottom padding only

--- a/style.css
+++ b/style.css
@@ -119,12 +119,11 @@ body {
 .right-container-middle {
   height: 25%;
   padding: var(--right-section-padding);
-  background-color: aqua;
   font-size: 1rem;
+  height: fit-content;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  height: fit-content;
+  gap: 16px;
 }
 
 .right-container-bottom {
@@ -140,7 +139,7 @@ body {
   background-color: var(--bg-color);
   color: white;
   border: none;
-  margin: 24px 0;
+  margin: 0 0 24px;
   padding: 0.5em 2em;
   border-radius: 16px;
   font-weight: 600;
@@ -156,12 +155,13 @@ body {
   display: flex;
   flex-direction: column;
   flex: 1;
-  margin-bottom: 8px;
+  margin: 0 10% 8px 0;
+  font-size: 0.8rem;
 }
 
 .form-section {
   display: flex;
   flex-wrap: wrap;
-  gap: 16px;
 }
+
 
